--- a/style.css
+++ b/style.css
@@ -8,22 +8,45 @@
 :root {
   --primary: #6959f8e1;
   --secondary: #b8a8ffe8;
-  --dark: #1d2144;
-  --light: #f8f9fa;
-  --accent: #ff6b6b;
   --text: #333333;
   --text-light: #666666;
+  --nav-bg: rgba(255, 255, 255, 0.95);
+  --background: linear-gradient(135deg, #f5f7ff 0%, #e3e6ff 100%);
+  --stack_bg: #ffffff;
 }
 
 body {
   color: var(--text);
-  background-color: var(--light);
+  background: var(--background);
   line-height: 1.6;
   overflow-x: hidden;
+  transition: background 0.3s, color 0.3s;
 }
 
 body.dark {
-  background-color: var(--dark);
+  --nav-bg: rgba(0, 0, 0, 0.95);
+  --background: #1d2144;
+  --text: #f8f9fa;
+  --text-light: #cccccc;
+  --stack_bg: #2c2f48;
+}
+
+.switch_theme button {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background-color: var(--primary);
+  padding: 10px;
+  border-radius: 30px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-style: groove;
+  cursor: pointer;
+  color: white;
+  font-size: 1rem;
 }
 
 .container {
@@ -41,7 +64,7 @@ section {
 }
 
 nav {
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: var(--nav-bg);
   position: fixed;
   top: 0;
   width: 100%;
@@ -79,7 +102,6 @@ input[type="checkbox"] {
 
 /* Home Section */
 .home-section {
-  background: linear-gradient(135deg, #f5f7ff 0%, #e3e6ff 100%);
   text-align: center;
   position: relative;
   gap: 150px;
@@ -88,7 +110,7 @@ input[type="checkbox"] {
 .home-section h1 {
   font-size: 3.5rem;
   margin-bottom: 20px;
-  color: var(--dark);
+  color: var(--text);
   line-height: 1.2;
 }
 
@@ -111,7 +133,7 @@ input[type="checkbox"] {
 }
 
 .stack {
-  background: white;
+  background-color: var(--stack_bg);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
@@ -211,6 +233,32 @@ input[type="checkbox"] {
   left: 50%;
   transform: translateX(-50%);
   animation: bounce 2s infinite;
+}
+
+.about_articles {
+  display: flex;
+  gap: 50px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+
+}
+
+.about_content_joaz {
+  font-size: 1.2rem;
+
+}
+
+.about_content_igor {
+  font-size: 1.2rem;
+
+}
+
+.about_sociasl-icons {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
 }
 
 @keyframes bounce {
