--- a/style.css
+++ b/style.css
@@ -182,9 +182,14 @@ input[type="checkbox"] {
   color: white;
   display: flex;
   border-radius: 25px;
-  border: 1px solid #ccc;
+  border: 1px solid #6959f8e1;
   height: 50px;
   width: 180px;
+}
+
+.link_contact {
+  text-decoration: none;
+  color: var(--text_light);
 }
 
 .button_services:hover {
@@ -235,6 +240,12 @@ input[type="checkbox"] {
   animation: bounce 2s infinite;
 }
 
+.about_persons {
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .about_articles {
   display: flex;
   gap: 50px;
@@ -242,23 +253,27 @@ input[type="checkbox"] {
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-
 }
 
 .about_content_joaz {
-  font-size: 1.2rem;
-
+  font-size: 1.5rem;
 }
 
 .about_content_igor {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 
 }
 
-.about_sociasl-icons {
+.about_socials {
+  margin-top: 15px;
   display: flex;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 5px;
+  justify-content: center;
+}
+
+.about_social_link {
+  color: var(--text-light);
+  transition: color 0.3s;
 }
 
 @keyframes bounce {
