feat: atualizar componentes About e Home com melhorias de texto e acessibilidade

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,9 +5,9 @@
     
     <div class="about-content">
       <div class="company-intro" scrollAnimate="fadeInUp">
-        <h3>Joaz & Igor Digital Labs</h3>
+        <h3>L Digital Labs</h3>
         <p class="company-description">
-          Somos uma dupla de desenvolvedores Full-Stack apaixonados por tecnologia e inovação. 
+          Somos uma equipe de desenvolvedores Full-Stack apaixonados por tecnologia e inovação. 
           Nossa missão é transformar ideias em soluções digitais que impulsionam o sucesso dos nossos clientes.
         </p>
       </div>
