--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,14 +17,14 @@
         proporcionando soluções web, desktop e mobile visualmente impressionantes e altamente funcionais.
       </p>
       <div class="hero-buttons" scrollAnimate="fadeInUp">
-        <a class="btn btn-primary" role="button" tabindex="0">
+        <button type="button" class="btn btn-primary">
           <i class="fas fa-code" aria-hidden="true"></i>
           Ver Nossos Serviços
-        </a>
-        <a class="btn btn-secondary" role="button" tabindex="0">
+        </button>
+        <button type="button" class="btn btn-secondary">
           <i class="fas fa-calendar-alt" aria-hidden="true"></i>
           Agendar Consulta Gratuita
-        </a>
+        </button>
       </div>
 
       <div class="scroll-indicator">
