--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -147,7 +147,7 @@
     <div class="projects-cta" scrollAnimate="fadeInUp">
       <h3>Gostou do que viu?</h3>
       <p>Vamos conversar sobre como podemos transformar sua ideia em realidade</p>
-      <button class="btn btn-primary">
+      <button class="btn btn-primary" (click)="startProject()">
         <i class="fas fa-rocket"></i>
         Iniciar Meu Projeto
       </button>
