--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -132,6 +132,7 @@
   padding: 25px 30px;
   cursor: pointer;
   transition: all 0.3s ease;
+  -webkit-user-select: auto;
   user-select: none;
 
   h3 {
