--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -46,6 +46,7 @@
     color: var(--primary);
     font-size: 0.85rem;
     font-weight: 500;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     
     i {
